--- a/Matatag-Curriculum.html
+++ b/Matatag-Curriculum.html
@@ -15,7 +15,7 @@
             
             <ul>
                 <li><a href="index.html">Home</a></li> 
-                <li><a class="nav-active1" href="all_articles.html">Articles</a></li>
+                <li><a href="all_articles.html">Articles</a></li>
                 <li><a href="#">About</a></li>  
                 <li><a href="#">Contact</a></li>
             </ul> 
