--- a/all_articles.html
+++ b/all_articles.html
@@ -32,9 +32,12 @@
         <h2>Here are more articles you can read about education in the Philippines: </h2>
 
         <ul>
-            <li><a href="k-12-article.html">From Kindergarten to Graduation: The Lifelong Impact of K-12 Learning Benefits</a></li>
-            <li><a href="covid-19.html">Philippine Education Before Covid-19 Crisis</a></li>
-            <li><a href="Matatag-Curriculum.html">Matatag Curriculum</a></li>
+            <li><a href="k-12-article.html">‎ ‎ - From Kindergarten to Graduation: The Lifelong Impact of K-12 Learning Benefits</a></li>
+            <br>
+            <li><a href="covid-19.html">‎ ‎ - Philippine Education Before Covid-19 Crisis</a></li>
+            <br>
+            <li><a href="Matatag-Curriculum.html">‎ ‎ - Matatag Curriculum</a></li>
+            <br>
         </ul>
         
         
