--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="_">
         <meta name="keywords" content="HTML, CSS, Javascript">
         <meta name="revised" content="dd-mm-yyyy">
-        <link rel="stylesheet" type="text/css" href="../css files/index.css">
+        <link rel="stylesheet" type="text/css" href="css files/index.css">
 
     </head>
     <body>
