--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="author" content="_">
         <meta name="keywords" content="HTML, CSS, Javascript">
-        <meta name="revised" content="dd-mm-yyyy">
+        <meta name="revised" content="11-12-2024">
         <link rel="stylesheet" type="text/css" href="css files/index.css">
 
     </head>
@@ -21,7 +21,7 @@
         <nav class="nav-h1">
             <ul>
                 <li><a class="nav-active1" href="#">Home</a></li> 
-                <li><a href="all_articles.html">Articles</a></li>
+                <li><a href="html files/all_articles.html">Articles</a></li>
                 <li><a href="#">About</a></li>  
                 <li><a href="#">Contact</a></li>
             </ul> 
@@ -68,6 +68,8 @@
 
             <p>By prioritizing education and working together to overcome these challenges, the Philippines can build a brighter future for its next generation.</p>
         </article>
+
+        <div>jwqidjkw</div>
 		<footer>
 			<p>&copy; 2024 Education Matters Most Logo</p>
 		</footer>
