--- a/Matatag-Curriculum.html
+++ b/Matatag-Curriculum.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Matatag Curriculum</title>
-        <link rel="stylesheet" type="text/css" href="Matatag-Curriculum.css">
+        <link rel="stylesheet" type="text/css" href="css files/Matatag-Curriculum.css">
     </head>
     <body>
 
@@ -16,8 +16,6 @@
             <ul>
                 <li><a href="index.html">Home</a></li> 
                 <li><a href="all_articles.html">Articles</a></li>
-                <li><a href="#">About</a></li>  
-                <li><a href="#">Contact</a></li>
             </ul> 
         </nav> 
 
