--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         <nav class="nav-h1">
             <ul>
                 <li><a class="nav-active1" href="#">Home</a></li> 
-                <li><a href="html files/all_articles.html">Articles</a></li>
-                <li><a href="#">About</a></li>  
-                <li><a href="#">Contact</a></li>
+                <li><a href="all_articles.html">Articles</a></li>
             </ul> 
         </nav> 
 
@@ -68,8 +66,6 @@
 
             <p>By prioritizing education and working together to overcome these challenges, the Philippines can build a brighter future for its next generation.</p>
         </article>
-
-        <div>jwqidjkw</div>
 		<footer>
 			<p>&copy; 2024 Education Matters Most Logo</p>
 		</footer>
